HelloWorld/force-app/main/default/objects/Applicant__c/fields/Aadhar_card_del__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_card_del__c</fullName>
    <label>Aadhar card</label>
    <length>12</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>