HelloWorld/force-app/main/default/objects/Applicant__c/fields/Applicant_photo__c.field-meta.xml
<CustomField>
    <fullName>Applicant_photo__c</fullName>
    <label>Applicant photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>