HelloWorld/force-app/main/default/objects/Applicant__c/fields/Car_loan_amount__c.field-meta.xml
<CustomField>
    <fullName>Car_loan_amount__c</fullName>
    <label>Car loan amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>