HelloWorld/force-app/main/default/objects/Applicant__c/fields/Financer__c.field-meta.xml
<CustomField>
    <fullName>Financer__c</fullName>
    <label>Financer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gruh loan</fullName>
            </value>
            <value>
                <fullName>Ghar loan</fullName>
            </value>
            <value>
                <fullName>BAJAJ car loan</fullName>
            </value>
            <value>
                <fullName>TATA car loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>