HelloWorld/force-app/main/default/objects/Applicant__c/fields/Personal_Web_Add__c.field-meta.xml
<CustomField>
    <fullName>Personal_Web_Add__c</fullName>
    <label>Personal Web Add.</label>
    <type>Url</type>
</CustomField>