HelloWorld/force-app/main/default/objects/Applicant__c/fields/Police_verification__c.field-meta.xml
<CustomField>
    <fullName>Police_verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Police verification</label>
    <type>Checkbox</type>
</CustomField>