HelloWorld/force-app/main/default/objects/Applicant__c/fields/Req_Doc_list__c.field-meta.xml
<CustomField>
    <fullName>Req_Doc_list__c</fullName>
    <label>Req Doc list</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAN card</fullName>
            </value>
            <value>
                <fullName>Aadhar card</fullName>
            </value>
            <value>
                <fullName>Electric bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>