HelloWorld/force-app/main/default/objects/Applicant__c/fields/Special_symbol_on_body__c.field-meta.xml
<CustomField>
    <fullName>Special_symbol_on_body__c</fullName>
    <label>Special symbol on body</label>
    <type>TextArea</type>
</CustomField>