HelloWorld/force-app/main/default/objects/Applicant__c/fields/Total_balance__c.field-meta.xml
<CustomField>
    <fullName>Total_balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>