HelloWorld/force-app/main/default/objects/Applicant__c/recordTypes/Car_loan.recordType-meta.xml
<RecordType>
    <fullName>Car_loan</fullName>
    <active>false</active>
    <label>Car loan</label>
</RecordType>