HelloWorld/force-app/main/default/objects/Applicant__c/validationRules/First_name_contain_three_char.validationRule-meta.xml
<ValidationRule>
    <fullName>First_name_contain_three_char</fullName>
    <active>false</active>
    <description>Prevent to save First name whose char is less than three</description>
    <errorConditionFormula>LEN( First_Name__c ) &lt;3</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>Frirst name shound contain three char.</errorMessage>
</ValidationRule>