HelloWorld/force-app/main/default/objects/Applicant__c/validationRules/First_name_should_be_in_alphabets_only.validationRule-meta.xml
<ValidationRule>
    <fullName>First_name_should_be_in_alphabets_only</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(  First_Name__c  , &quot;^[a-zA-Z0_]*$&quot;))</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>First name should contain alphabets only</errorMessage>
</ValidationRule>