HelloWorld/force-app/main/default/objects/Applicant__c/validationRules/Minor_applicants_are_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Minor_applicants_are_not_allowed</fullName>
    <active>false</active>
    <description>Prevent to store data of minor applicants</description>
    <errorConditionFormula>Age__c &lt;18</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Minor applicants are not allowed</errorMessage>
</ValidationRule>