HelloWorld/force-app/main/default/objects/Applicant__c/validationRules/PAN_No_is_mandatory_for_manager_profile.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_No_is_mandatory_for_manager_profile</fullName>
    <active>false</active>
    <errorConditionFormula>AND (

$Profile.Name=&apos;Manager&apos;,
 ISBLANK( PAN_No__c ) 

)</errorConditionFormula>
    <errorDisplayField>PAN_No__c</errorDisplayField>
    <errorMessage>PAN No. is mandatory for Manager profile</errorMessage>
</ValidationRule>