HelloWorld/force-app/main/default/objects/Applicant__c/validationRules/PAN_No_should_be_in_std_format.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_No_should_be_in_std_format</fullName>
    <active>false</active>
    <description>Prevent PAN No without std format</description>
    <errorConditionFormula>NOT(
regex(PAN_No__c, &quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;)

)</errorConditionFormula>
    <errorDisplayField>PAN_No__c</errorDisplayField>
    <errorMessage>PAN No should be in std format</errorMessage>
</ValidationRule>